--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".SearchActivity"/>
+        <activity android:name=".MenuActivity"/>
         <activity android:name=".HomeActivity">
 
             <intent-filter>
