--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:26.+'
     compile 'com.backendless:backendless:4.0.3'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
 }
