--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".MenuActivity"/>
+        <activity android:name=".LoginActivity"/>
+        <activity android:name=".Search_details"/>
         <activity android:name=".HomeActivity">
 
             <intent-filter>
