--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".MenuActivity"/>
         <activity android:name=".LoginActivity"/>
         <activity android:name=".Search_details"/>
+        <activity android:name=".PrincipalSearch"/>
         <activity android:name=".HomeActivity">
 
             <intent-filter>
