--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.thodlydugue.kizinlakayapp">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:allowBackup="true"
         android:largeHeap="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logoapp"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -14,8 +15,13 @@
         <activity android:name=".MenuActivity"/>
         <activity android:name=".LoginActivity"/>
         <activity android:name=".Search_details"/>
+
+        <activity android:name=".search.MeatActivity"/>
+
         <activity android:name=".PrincipalSearch"/>
+
         <activity android:name=".HomeActivity">
+
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
