--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MenuActivity"/>
-        <activity android:name=".LoginActivity"/>
-        <activity android:name=".Search_details"/>
-        <activity android:name=".search.MeatActivity"/>
+
         <activity android:name=".HomeActivity">
 
 
@@ -25,6 +22,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MenuActivity"/>
+        <activity android:name=".LoginActivity"/>
+        <activity android:name=".Search_details"/>
+        <activity android:name=".search.MeatActivity"/>
+        <activity android:name=".search.DessertActivity"/>
     </application>
 
 </manifest>
