--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
 //Cardview
     compile'com.android.support:cardview-v7:26.+'
 
+    compile 'com.makeramen:roundedimageview:2.2.0'
 
 }
