--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
         <activity android:name=".Search_details"/>
         <activity android:name=".search.MeatActivity"/>
         <activity android:name=".search.DessertActivity"/>
+        <activity android:name=".search.SoupActivity"/>
+        <activity android:name=".search.JuiceActivity"/>
+        <activity android:name=".DetailsActivity"/>
+
     </application>
 
 </manifest>
