--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,12 @@
     <application
         android:allowBackup="true"
         android:largeHeap="true"
+        android:hardwareAccelerated="false"
         android:icon="@drawable/logoapp"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
-      
 
         <activity android:name=".PrincipalSearch"/>
 
