--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,7 @@
 
         <activity android:name=".PrincipalSearch"/>
 
-
         <activity android:name=".HomeActivity">
-
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,9 +25,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MenuActivity"
-
-            />
+        <activity android:name=".MenuActivity" />
         <activity android:name=".LoginActivity"/>
         <activity android:name=".Search_details"/>
         <activity android:name=".search.MeatActivity"/>
