--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,16 +24,17 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //Cardview
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:26.+'
     compile 'com.backendless:backendless:4.0.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:recyclerview-v7:26.0'
-    //Cardview
     compile 'com.android.support:cardview-v7:26.+'
     compile 'com.makeramen:roundedimageview:2.2.0'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'fr.avianey.com.viewpagerindicator:library:2.4.1.1@aar'
+    compile 'com.android.support:support-v4:26.+'
+    testCompile 'junit:junit:4.12'
 }
