--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,16 +7,17 @@
         android:allowBackup="true"
         android:largeHeap="true"
         android:hardwareAccelerated="false"
-        android:icon="@drawable/logoapp"
+        android:icon="@mipmap/ic_poel"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
 
+       <!-- <activity android:name=".PrincipalSearch"/>-->
+
+
         <activity android:name=".HomeActivity">
-
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,9 +25,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MenuActivity"
-
-            />
+        <activity android:name=".MenuActivity" />
         <activity android:name=".LoginActivity"/>
         <activity android:name=".Search_details"/>
         <activity android:name=".search.MeatActivity"/>
@@ -37,6 +36,10 @@
         <activity android:name=".DetailsActivity"/>
         <activity android:name=".LogActivity"/>
         <activity android:name=".RegisterActivity"/>
+
+        <activity android:name=".Event_Activity">
+
+        </activity>
 
     </application>
 
