--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,10 @@
 
         </activity>
 
+        <activity android:name=".search.FavoriteActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
